--- a/W11-orthogonal-poly-quadrature.ipynb
+++ b/W11-orthogonal-poly-quadrature.ipynb
@@ -36,12 +36,12 @@
     "$$\\int_{-1}^1 x^2 \\ dx = \\frac{2}{3} = c_1 x_1^2 + c_2 x_2^2$$\n",
     "$$\\int_{-1}^1 x^3 \\ dx = 0 = c_1 x_1^3 + c_2 x_2^3$$\n",
     "\n",
-    "The solution is $c_1=c_2=1$ and $x_2 = -x_1 = \\frac{1}{\\sqrt{3}}$. The nodes are the roots of the first two Legendre polynomials and this relationship is true in general. (Proof in textbook.) This makes the system above linear."
+    "The solution is $c_1=c_2=1$ and $x_2 = -x_1 = \\frac{1}{\\sqrt{3}}$. The nodes are the roots of the first two Legendre polynomials and this relationship is true in general. (Proof in textbook.) This makes the system above linear for determining $c_k$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "5783ee67",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a25f4074",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
        "  0.5773502691896257 + 0.0im"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "db3926f9",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "GL_quad_2 (generic function with 1 method)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "id": "3dff760e",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "dca43561",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
        "(1.6829419696157932, 1.9984014443252818e-15)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "a5a40b3e",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "1.6758236553899863"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "e8405933",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "(2.3504023872876028, 2.220446049250313e-15)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "2bbc9825",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "2.3426960879097307"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "f8065e84",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "2.6666666666666665"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "id": "0fd2f852-4c45-4734-91c0-2670bd7d77ac",
    "metadata": {},
    "outputs": [
@@ -240,23 +240,9 @@
      "output_type": "stream",
      "text": [
       "LegendreWeights(2) = [1.0, 1.0]\n",
-      "LegendreWeights(3) = [0.5555555555555554, 0.8888888888888891, 0.5555555555555554]\n",
-      "LegendreWeights(4) = [0.3478548451374539, 0.6521451548625463, 0.652145154862546, 0.347854845137454]\n"
+      "LegendreWeights(3) = [0.5555555555555554, 0.8888888888888891, 0.5555555555555556]\n",
+      "LegendreWeights(4) = [0.3478548451374539, 0.6521451548625463, 0.652145154862546, 0.3478548451374538]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "4-element Vector{Float64}:\n",
-       " 0.3478548451374539\n",
-       " 0.6521451548625463\n",
-       " 0.652145154862546\n",
-       " 0.347854845137454"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -272,12 +258,12 @@
     "LegendreWeights(n) = [ LegendreCoefficient(i, n) for i in 1:n ]  \n",
     "@show LegendreWeights(2)\n",
     "@show LegendreWeights(3)\n",
-    "@show LegendreWeights(4) # compare with Wikipedia table"
+    "@show LegendreWeights(4); # compare with Wikipedia table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "a028b519-e9ef-4c4c-84cc-17ea1b9a54fd",
    "metadata": {},
    "outputs": [
@@ -287,7 +273,7 @@
        "G_quad (generic function with 1 method)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 31,
    "id": "8c29fed2-430f-4a75-8456-e8a834926c2e",
    "metadata": {},
    "outputs": [
@@ -311,8 +297,8 @@
      "output_type": "stream",
      "text": [
       "G_quad(exp, 2) = 2.3426960879097307\n",
-      "G_quad(exp, 6) = 2.350402387286037\n",
-      "G_quad(exp, 10) = 2.350402387287624\n"
+      "G_quad(exp, 6) = 2.350402387286034\n",
+      "G_quad(exp, 10) = 2.350402387287612\n"
      ]
     }
    ],
@@ -332,17 +318,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "fd324464-f2b2-4126-be2f-65228dc8e9b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#93 (generic function with 1 method)"
+       "#7 (generic function with 1 method)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,17 +341,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "id": "3c76aeb3-76d0-4960-8c34-86ceef49cc86",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(317.344246673829, (317.3442466738263, 1.7053025658242404e-13))"
+       "(317.3442466738275, (317.3442466738263, 1.7053025658242404e-13))"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,23 +362,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 36,
    "id": "c54a6c67-94a0-463e-83bf-556f51e5c622",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-2.536069089336828e41"
+       "317.344246673847"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gaussianQuadAB( x -> x^6 - x^2*sin(2*x), 1, 3, 117)"
+    "gaussianQuadAB( x -> x^6 - x^2*sin(2*x), 1, 3, 12)"
    ]
   },
   {
@@ -454,7 +440,7 @@
     {
      "data": {
       "text/plain": [
-       "(2.350402387287604, [-0.9739065285171705, -0.8650633666889841, -0.6794095682990241, -0.4333953941292462, -0.1488743389816315, 0.14887433898163216, 0.43339539412924755, 0.6794095682990245, 0.8650633666889843, 0.9739065285171716])"
+       "(2.350402387287605, [-0.9739065285171699, -0.8650633666889836, -0.6794095682990239, -0.433395394129246, -0.14887433898163105, 0.14887433898163227, 0.43339539412924755, 0.6794095682990245, 0.8650633666889843, 0.9739065285171716])"
       ]
      },
      "execution_count": 38,
@@ -464,6 +450,27 @@
    ],
    "source": [
     "glint(exp, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f9be2faf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3504023872876028"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp(1) - exp(-1)"
    ]
   },
   {
@@ -478,17 +485,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "id": "16d8f4b6-346d-472e-8e60-9208927e94ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "317.3442466738266"
+       "317.34424667382655"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,6 +516,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "04d1b4db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "317.3442632773636"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adaptive( x -> x^6 - x^2*sin(2*x), 1, 3, 5, 1e-15)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f9cb3230-a8fd-4835-89e7-899b9d87ab7a",
    "metadata": {},
@@ -518,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "id": "1738aa73-46bf-4ea1-8491-6272026f9ef2",
    "metadata": {},
    "outputs": [
@@ -528,7 +556,7 @@
        "([-0.5773502691896258, 0.5773502691896258], [0.9999999999999998, 0.9999999999999998])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 42,
    "id": "b0b0c8fa-6594-4c8c-b0a7-dcf8324266ac",
    "metadata": {},
    "outputs": [
@@ -557,14 +585,14 @@
        "adaptiveQuad (generic function with 1 method)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function adaptiveQuad(f, a, b, n, maxN, tolerance)\n",
-    "    Sab = gaussianQuadAB(f, a, b, n)\n",
+    "    Sab = gaussianQuadAB(f, a, b, n) # change to glint?\n",
     "    Sab2 = gaussianQuadAB(f, a, (a+b)/2, n) + gaussianQuadAB(f, (a+b)/2, b, n) \n",
     "    error = abs(Sab - Sab2)\n",
     "    if error < tolerance || maxN < 2 \n",
@@ -577,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 43,
    "id": "e8ea96d3-1580-4783-b136-27020d014545",
    "metadata": {},
    "outputs": [
@@ -587,7 +615,7 @@
        "317.3442466738263"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,28 +626,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 47,
    "id": "f9aadf77-35c3-4050-8466-84e059ab06fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "82104.40371976182"
+       "82104.40373705792"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adaptiveQuad( x -> log(x), 1, 10_000, 3, 20, 1e-15)"
+    "adaptiveQuad( x -> log(x), 1, 10_000, 3, 13, 1e-15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 45,
    "id": "f7c5f918-0631-4ae6-b042-5e0bae36bb56",
    "metadata": {},
    "outputs": [
@@ -629,7 +657,7 @@
        "(82104.40371975201, 0.00011569353589990783)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,8 +676,12 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
-   "display_name": "Julia 1.8.0",
+   "display_name": "Julia 1.8.4",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -657,7 +689,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.0"
+   "version": "1.8.4"
   }
  },
  "nbformat": 4,
